--- a/resume.html
+++ b/resume.html
@@ -176,7 +176,7 @@
         <span class="job-date">Dec 2022 – Present | Bangalore, India</span>
       </div>
       <ul>
-        <li>Architected and developed a cloud-native vacation booking platform in <b>Java, Quarkus</b>,
+        <li>Architected and developed a Cloud-native Vacation Booking platform in <b>Java, Quarkus</b>,
            supporting <b>30K+ concurrent users</b>.
         </li>
         <li>Led a <b>cost-optimization</b> initiative in the <b>ROSA (Red Hat OpenShift Service on AWS)</b> environment
@@ -187,7 +187,7 @@
         <li>Developed a <b>real-time</b> user activity detection service from scratch, monitoring <b>cross-tab
           interactions</b>, <b>syncing session states</b>, and triggering configurable alerts (e.g., logout warnings), enhancing
             engagement and security.</li>
-        <li>Owned the <b>Microservices</b> roadmap for the <b>Spring</b> based vacation-booking platform handling $4.8–9.6 million USD in weekly
+        <li>Owned the <b>Microservices</b> roadmap for the <b>Spring</b> based <b>Delta Airline-booking platform</b> handling $4.8–9.6 million USD in weekly
             bookings while maintaining 99.9% availability on <b>AWS EKS</b>.</li>
         <li>Modernised 11 legacy mainframe applications to <b>Nx</b> micro-frontends and <b>Quarkus</b> containers, cutting deployment cycles from
         1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
