--- a/resume.html
+++ b/resume.html
@@ -177,7 +177,7 @@
       </div>
       <ul>
         <li>Architected and developed a Cloud-native Vacation Booking platform in <b>Java, Quarkus</b>,
-           supporting <b>30K+ concurrent users</b>.
+           supporting <b>30K+ concurrent users</b>,the release increased <b>SME agent active user base by ~40%</b>, making it one of the most <b>impactful deliverables of the year</b>.
         </li>
         <li>Led a <b>cost-optimization</b> initiative in the <b>ROSA (Red Hat OpenShift Service on AWS)</b> environment
           by identifying
