--- a/resume.html
+++ b/resume.html
@@ -157,7 +157,7 @@
   <div class="section">
     <h2 style=" margin-top: 0;">Technical Skills</h2>
     <div class="skills-grid" style="margin-left: 3.8rem;">
-      <div><b>Backend/Frameworks:</b>  Java • Spring Boot • Quarkus • Spring MVC • Hibernate • Application Servers • Servlet Containers  • JPA</div>
+      <div><b>Backend/Frameworks:</b>  Java • Spring Boot • Quarkus • Spring MVC • Hibernate  Application Servers • Servlet Containers  • JPA</div>
       <div><b>Cloud/DevOps:</b> AWS (EC2, S3, Lambda, CloudWatch) • Kubernetes • Docker • GitLab CI/CD • Terraform • Helm • Grafana</div>
       <div><b>Data Messaging,Testing Stack:</b> Kafka • Unit Testing  • JUnit</div>
       <div><b>Frontend:</b> Angular • Typescript</div>
