--- a/resume.html
+++ b/resume.html
@@ -214,7 +214,7 @@
         <li>Integrated bureau and alternative-data <b>asynchronous APIs</b>, improving credit-risk prediction accuracy by 15% through smarter data aggregation
           and <b>real-time ingestion pipelines</b>.
         </li>
-        <li>Built a pricing-guidance API for a global hardware client, enabling ~5% sales uplift via dynamic competitor benchmarking and
+        <li>Built a <b>pricing-guidance API </b> for a global hardware client, enabling ~5% sales uplift via dynamic competitor benchmarking and
            personalized price recommendations.
         </li>
         <li>Developed a real-time forecasting dashboard using <b>Java (Spring Boot), MySQL, Kafka Streaming, Spark Streaming,</b> and Angular,
