--- a/resume.html
+++ b/resume.html
@@ -217,7 +217,7 @@
         <li>Built a <b>pricing-guidance API </b> for a global hardware client, enabling ~5% sales uplift via dynamic competitor benchmarking and
            personalized price recommendations.
         </li>
-        <li>Developed a real-time forecasting dashboard using <b>Java (Spring Boot), MySQL, Kafka Streaming, Spark Streaming,</b> and <b>Angular</b>,
+        <li>Developed a real-time forecasting dashboard for a major <b>Banking</b> Client using <b>Java (Spring Boot), MySQL, Kafka Streaming, Spark Streaming,</b> and <b>Angular</b>,
           reducing report generation time from hours to minutes, showcasing backend-focused full-stack development.
         </li>
         <li>Introduced PR templates, <b>test-driven development (TDD)</b>, and <b>design-pattern guidelines</b> for a 12-member engineering squad,
