--- a/resume.html
+++ b/resume.html
@@ -247,7 +247,7 @@
     <p style="margin-left: 3.8rem;">
       <b>B.E. in Computer Science Engineering</b> | 2015 – 2019 | India<br>
       CGPA: 8.2 / 10<br>
-      <b>Relevant Core Skills</b>: <b>OOPS</b> (Object Oriented Programming), <b>Data Structures & Algorithms</b>, Microservices Architecture,
+      <b>Relevant Core Skills</b>: Microservices Architecture, <b>OOPS</b> (Object Oriented Programming), <b>Data Structures & Algorithms</b>,
       Cloud-Native Development, Event-Driven Design, <b>DevOps CI/CD, Agile-Scrum Methodology</b>, Technical Leadership Mentoring, Technical Documentation
       <b>Software Design</b>,Performance Optimisation
     </p>
