--- a/resume.html
+++ b/resume.html
@@ -295,7 +295,7 @@
           </b>
         </div>
         <div>
-          • Built an event-driven microservices playground on <b>Kubernetes integrating Neo4J, PostgreSQL and Kafka</b>.
+          • Built an event-driven microservices playground on <b>Kubernetes integrating Neo4J, Redis, PostgreSQL and Kafka</b>.
           • Implemented <b>MVC</b> architecture for structured code organisation ,separating data handling(<b>Model</b>),user interface(<b>View</b>),
             and business logic (<b>Controller</b>),optimising maintainability and scalability.
         </div>
