--- a/resume.html
+++ b/resume.html
@@ -189,7 +189,7 @@
             engagement and security.</li>
         <li>Owned the <b>Microservices</b> roadmap for the <b>Spring</b> based <b>Delta Airline-booking platform</b> handling $4.8–9.6 million USD in weekly
             bookings while maintaining 99.9% availability on <b>AWS EKS</b>.</li>
-        <li>Modernised 11 legacy mainframe applications to <b>Nx based Angular</b> micro-frontends cutting deployment cycles from
+        <li>Modernised 11 legacy mainframe applications to Nx and <b>Quarkus containers</b> micro-frontends cutting deployment cycles from
         1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
         </li>
         <li>Led caching and integration strategy using <b>Redis</b> and <b>PostgresSQL</b> that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
@@ -234,7 +234,7 @@
         <span class="job-date">Aug 2019 – Oct 2020 | Pune, India</span>
       </div>
       <ul>
-        <li>Developed an internal job portal <b>(React/Spring)</b> serving 2,000+ employees and shortening HR coordination cycles.</li>
+        <li>Developed an internal job portal <b>(Angular/Spring)</b> serving 2,000+ employees and shortening HR coordination cycles.</li>
         <li>Revamped intranet homepage used by 10,000 staff, increasing daily <b>engagement by 25%</b>.</li>
         <li>Consistently met <b>100% of sprint commitments under XP and continuous-integration practices</b>.</li>
       </ul>
