--- a/resume.html
+++ b/resume.html
@@ -189,7 +189,7 @@
             engagement and security.</li>
         <li>Owned the <b>Microservices</b> roadmap for the <b>Spring</b> based <b>Delta Airline-booking platform</b> handling $4.8–9.6 million USD in weekly
             bookings while maintaining 99.9% availability on <b>AWS EKS</b>.</li>
-        <li>Modernised 11 legacy mainframe applications to Nx and <b>Quarkus containers</b> micro-frontends cutting deployment cycles from
+        <li>Modernised 11 legacy mainframe applications to Nx micro-frontends and <b>Quarkus containers</b> cutting deployment cycles from
         1-2 weeks to under 4 hours <b>(80-90% faster)</b> across an 8-member team.
         </li>
         <li>Led caching and integration strategy using <b>Redis</b> and <b>PostgresSQL</b> that reduced <b>vacation-search latency by 93% (30 s ➜ 2 s) for 5,000-10,000 daily searches</b>.</li>
